[JPA][Baron-Janelle] Re-factored: transferred mapper to controller from service